# libFDX

./: .gitignore  AGENTS.md  README.md  build.gradle.kts  gradle.properties  settings.gradle.kts
benchmark/core/: build.gradle.kts
benchmark/platform/desktop/: build.gradle.kts
buildSrc/: build.gradle.kts
docs/: ARCHITECTURE.md  COMMON_API.md
gradle/: libs.versions.toml
libfdx/assets/loaders/: build.gradle.kts
libfdx/assets/manager/: build.gradle.kts
libfdx/backends/android/: build.gradle.kts
libfdx/backends/desktop/: build.gradle.kts
libfdx/backends/desktop_native/: build.gradle.kts
libfdx/backends/web/: build.gradle.kts
libfdx/extensions/graphics/gl/core/: build.gradle.kts
libfdx/extensions/graphics/vulkan/core/: build.gradle.kts
libfdx/extensions/graphics/vulkan/platform/android_jni/src/main/cpp/: CMakeLists.txt  libfdx_android_vulkan.cpp
libfdx/foundation/core/: build.gradle.kts
libfdx/graphics/api/: build.gradle.kts
libfdx/graphics/g2d/: build.gradle.kts
libfdx/graphics/g3d/: build.gradle.kts
libfdx/runtime/application/: build.gradle.kts
libfdx/runtime/display/: build.gradle.kts
libfdx/runtime/files/: build.gradle.kts
samples/basic/core/: build.gradle.kts
samples/basic/platform/android/: build.gradle.kts
samples/basic/platform/desktop/: build.gradle.kts
samples/basic/platform/desktop_native/: build.gradle.kts
samples/basic/platform/web/: build.gradle.kts
tests/assets/: cube.gltf
tests/core/: build.gradle.kts
tests/platform/android/: build.gradle.kts
tests/platform/desktop/: build.gradle.kts
(+236 files in other folders)
